feat: PATRON2020-223 add blinds endpoint and update schemas
